# toyDSL

./: .gitignore  Readme.md  Timings.txt  plot.py  stencil_code_measurements.py
easyNumpy/: easynumpy.py
example/: basic_function.py  stencil_code.py
report/: report.tex
timings/: .txt
toydsl/backend/: codegen.py  codegen_cpp.py  codegencpp.py  generated.py
toydsl/cpp/: CMakeLists.txt  dslgen.cpp
toydsl/driver/: driver.py
toydsl/frontend/: frontend.py  language.py
toydsl/ir/: ir.py  visitor.py
